// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExitComp should render 1`] = `
<div
  className="exit plumb-exit"
>
  <div
    className="name"
  >
    Red
  </div>
  <div
    className="endpoint  jtk-connected"
    id="763e4844-3e1b-407a-a1b5-5fdfcd308b41:b1f332f3-bdd3-4891-aec5-1843a712dbf1"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  />
</div>
`;

exports[`ExitComp shows localization 1`] = `
<div
  className="exit plumb-exit translating"
>
  <div
    className="name"
  >
    Hola!
  </div>
  <div
    className="endpoint  jtk-connected"
    id="763e4844-3e1b-407a-a1b5-5fdfcd308b41:b1f332f3-bdd3-4891-aec5-1843a712dbf1"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  />
</div>
`;

exports[`ExitComp shows missing localization 1`] = `
<div
  className="exit plumb-exit translating missing_localization"
>
  <div
    className="name"
  >
    Red
  </div>
  <div
    className="endpoint  jtk-connected"
    id="763e4844-3e1b-407a-a1b5-5fdfcd308b41:b1f332f3-bdd3-4891-aec5-1843a712dbf1"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  />
</div>
`;

exports[`ExitComp shows recent messages 1`] = `
<div
  className="exit plumb-exit"
>
  <div
    className="name"
  >
    Red
  </div>
  <div
    className="endpoint  jtk-connected"
    id="763e4844-3e1b-407a-a1b5-5fdfcd308b41:b1f332f3-bdd3-4891-aec5-1843a712dbf1"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  />
</div>
`;
